--- a/api/qsharp/Microsoft.Quantum.Arrays.yml
+++ b/api/qsharp/Microsoft.Quantum.Arrays.yml
@@ -1,12 +1,14 @@
 ### YamlMime:QSharpNamespace
 uid: microsoft.quantum.arrays
 name: Microsoft.Quantum.Arrays
-summary: " # <a name=\"summary\"></a>总结\n 此命名空间包含用于创建和操作数据数组的函数。"
+summary: " # <a name=\"summary\"></a>摘要\n 此命名空间包含用于创建和操作数据数组的函数。"
 functions:
 - uid: microsoft.quantum.arrays.all
   summary: 给定为数组元素定义的数组和谓词，并检查数组的所有元素是否都满足该谓词。
 - uid: microsoft.quantum.arrays.any
   summary: 给定为数组元素定义的数组和谓词，检查数组中是否至少有一个元素满足该谓词。
+- uid: microsoft.quantum.arrays.chunks
+  summary: 将数组拆分为长度相等的多个部分。
 - uid: microsoft.quantum.arrays.constantarray
   summary: 创建一个给定长度的数组，其中的所有元素都等于给定的值。
 - uid: microsoft.quantum.arrays.enumerated
@@ -23,6 +25,8 @@ functions:
   summary: 返回满足给定谓词的数组中第一个元素的第一个索引。 如果此类元素不存在，则返回-1。
 - uid: microsoft.quantum.arrays.indexrange
   summary: 给定一个数组，返回该数组的索引范围，该范围适用于在 for 循环中使用。
+- uid: microsoft.quantum.arrays.isempty
+  summary: 当且仅当数组为空时，返回 true。
 - uid: microsoft.quantum.arrays.lookupfunction
   summary: 给定一个数组，返回返回该数组的元素的函数。
 - uid: microsoft.quantum.arrays.mapped
@@ -51,6 +55,8 @@ functions:
   summary: 返回数组的最后一个元素。
 - uid: microsoft.quantum.arrays.tuplearrayasnestedarray
   summary: 将2元组的列表转换为嵌套数组。
+- uid: microsoft.quantum.arrays.where
+  summary: 给定谓词和数组后，返回该数组的索引，其中谓词为 true。
 - uid: microsoft.quantum.arrays.zip
   summary: 给定两个数组，返回一个新的对数组，以便每个对都包含来自每个原始数组的元素。
 - uid: microsoft.quantum.arrays.zip3
@@ -61,9 +67,9 @@ operations:
 - uid: microsoft.quantum.arrays.foreach
   summary: 给定为数组元素定义的数组和操作，返回一个新数组，该数组由该操作下的原始数组的图像组成。
 metadata:
-  ms.openlocfilehash: 12835bef2608d979809027cb9a271f2cda864b10
-  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
+  ms.openlocfilehash: 5cbe8e172fda72d1016b407656c75457526651aa
+  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 12/05/2019
-  ms.locfileid: "74858864"
+  ms.lasthandoff: 02/28/2020
+  ms.locfileid: "77905584"
