--- a/api/qsharp/microsoft.quantum.canon.multiplexoperations.yml
+++ b/api/qsharp/microsoft.quantum.canon.multiplexoperations.yml
@@ -11,7 +11,7 @@ summary: >-
 
 
   $U = \sum ^ {2 ^ n-1} _ {j = 0} \ket{j}\bra{j}\otimes V_j $。
-remarks: 如果指定的 `coefficients` 小于 $ 2 ^ n $，则将用标识元素填充。 此实现使用 $n-$1 ancilla qubits。
+remarks: 如果指定的 `coefficients` 小于 $ 2 ^ n $，则将用标识元素填充。 此实现使用 $n-$1 辅助 qubits。
 syntax: "operation MultiplexOperations (unitaries : ('T => Unit is Adj + Ctl)[], index : Microsoft.Quantum.Arithmetic.LittleEndian, target : 'T) : Unit"
 references: '- 对于具有量程加速的第一个量子模拟，Andrew Childs，Dmitri Maslov，Yunseong，Neil Ross，人民币元 Su https://arxiv.org/abs/1711.10980'
 input:
@@ -48,9 +48,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: bd248ece9d76729a33db3dfead177fa68909f438
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 93fa7ef1f5a7374f970098eb5fa865e02854d1ff
+  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73223490"
+  ms.lasthandoff: 02/28/2020
+  ms.locfileid: "77906706"
