--- a/articles/TOC.yml
+++ b/articles/TOC.yml
@@ -1,23 +1,21 @@
 - name: Microsoft Quantum 文档
   href: index.yml
-- name: 概述
+- name: 量子计算入门
   items:
-    - name: 入门
+    - name: 什么是量子计算？
+      href: overview/what-is-quantum-computing.md
+    - name: 量子计算机有何用途？
+      href: overview/quantum-computers.md
+    - name: 为何学习量子计算？
+      href: overview/why-learn-quantum-computing.md
+    - name: '什么是 Q# 和 QDK？'
+      href: overview/what-is-qsharp.md
+    - name: 如何了解详细信息？
+      href: overview/how-to-learn-quantum-computing.md
+- name: 获取 Quantum 开发工具包
+  items:
+    - name: QDK 入门
       href: welcome.md
-    - name: 关于量子计算的五个问题
-      items:
-        - name: 什么是量子计算？
-          href: overview/what-is-quantum-computing.md
-        - name: 量子计算机有何用途？
-          href: overview/quantum-computers.md
-        - name: 为何学习量子计算？
-          href: overview/why-learn-quantum-computing.md
-        - name: '什么是 Q#？'
-          href: overview/what-is-qsharp.md
-        - name: 如何学习量子计算？
-          href: overview/how-to-learn-quantum-computing.md
-- name: 安装和更新
-  items:
     - name: 安装 QDK
       items:
         - name: 安装概述
@@ -30,15 +28,23 @@
           href: install-guide/qjupyter.md
     - name: 更新 QDK
       href: install-guide/update.md
-- name: 快速入门
+    - name: '如何创建 Q# 项目'
+      href: how-to-guides/create-qsharp-project.md
+- name: 'Q# 学习资源'
   items:
-    - name: 量子随机数生成器
-      href: quickstarts/qrng.md
-    - name: 'Q# 的量子基础知识'
-      href: quickstart.md
-    - name: 实现 Grover 的搜索算法
-      href: quickstarts/search.md
-- name: 概念
+    - name: 快速入门
+      items:
+        - name: 量子随机数生成器
+          href: quickstarts/qrng.md
+        - name: '通过 Q# 探索纠缠'
+          href: quickstart.md
+        - name: 实现 Grover 的搜索算法
+          href: quickstarts/search.md
+    - name: '通过 Quantum Katas 学习 Q#'
+      href: intro-to-katas.md
+    - name: 'Q# 代码示例'
+      href: 'https://docs.microsoft.com/en-us/samples/browse/?languages=qsharp'
+- name: 深入探讨 QDK
   items:
     - name: 量子开发技术
       topicHref: techniques/index.md
@@ -46,33 +52,17 @@
     - name: 'Q# 编程语言'
       topicHref: language/index.md
       href: language/toc.yml
-    - name: 'Q# 库'
-      href: libraries/toc.yml
     - name: 量子模拟器和资源估算器
       href: machines/toc.yml
-    - name: 量子计算概念
-      href: concepts/toc.yml
-- name: 操作方法指南
-  items:
-    - name: '创建 Q# 项目'
-      href: how-to-guides/create-qsharp-project.md
-- name: 'Q# 学习资源'
-  items:
-    - name: 了解如何使用 Quantum Katas
-      href: intro-to-katas.md
-    - name: 'Q# 示例'
-      href: 'https://docs.microsoft.com/en-us/samples/browse/?languages=qsharp'
-- name: 资源
-  items:
-    - name: 术语表
-      href: Glossary.md
-    - name: 进一步阅读
-      href: for-more-info.md
-    - name: QDK 发行说明
-      topicHref: relnotes/index.md
-      href: relnotes/toc.yml
-    - name: 参与编写 QDK
-      href: contributing/toc.yml
-      topicHref: contributing/index.md
-    - name: 许可
-      href: license.md
+- name: 'Q# 库'
+  href: libraries/toc.yml
+- name: 量子计算概念
+  href: concepts/toc.yml
+- name: 进一步阅读
+  href: for-more-info.md
+- name: 参与编写 QDK
+  href: contributing/toc.yml
+  topicHref: contributing/index.md
+- name: QDK 发行说明
+  topicHref: relnotes/index.md
+  href: relnotes/toc.yml
