--- a/articles/libraries/toc.yml
+++ b/articles/libraries/toc.yml
@@ -4,6 +4,9 @@
 - name: 量子化学库
   topicHref: chemistry/index.md
   href: chemistry/toc.yml
+- name: 量子机器学习库
+  topicHref: machine-learning/index.md
+  href: machine-learning/toc.yml
 - name: 量子数字库
   topicHref: numerics/index.md
   href: numerics/toc.yml
