--- a/api/qsharp/Microsoft.Quantum.Arrays.yml
+++ b/api/qsharp/Microsoft.Quantum.Arrays.yml
@@ -1,7 +1,7 @@
 ### YamlMime:QSharpNamespace
 uid: microsoft.quantum.arrays
 name: Microsoft.Quantum.Arrays
-summary: " # <a name=\"summary\"></a>摘要\n 此命名空间包含用于创建和操作数据数组的函数。"
+summary: " # <a name=\"summary\"></a>总结\n 此命名空间包含用于创建和操作数据数组的函数。"
 functions:
 - uid: microsoft.quantum.arrays.all
   summary: 给定为数组元素定义的数组和谓词，并检查数组的所有元素是否都满足该谓词。
@@ -13,6 +13,8 @@ functions:
   summary: 创建一个给定长度的数组，其中的所有元素都等于给定的值。
 - uid: microsoft.quantum.arrays.enumerated
   summary: 给定一个数组，返回一个新数组，其中包含原始数组的元素以及每个元素的索引。
+- uid: microsoft.quantum.arrays.equala
+  summary: 给定两个相同类型的数组和为数组元素对定义的谓词，检查数组是否相等。
 - uid: microsoft.quantum.arrays.exclude
   summary: 返回一个数组，其中包含另一个数组的元素，而不包括给定索引列表中的元素。
 - uid: microsoft.quantum.arrays.filtered
@@ -67,9 +69,9 @@ operations:
 - uid: microsoft.quantum.arrays.foreach
   summary: 给定为数组元素定义的数组和操作，返回一个新数组，该数组由该操作下的原始数组的图像组成。
 metadata:
-  ms.openlocfilehash: 5cbe8e172fda72d1016b407656c75457526651aa
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 422564f632efd7a6d093d78358a15ee012f918f8
+  ms.sourcegitcommit: a0e50c5f07841b99204c068cf5b5ec8ed087ffea
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77905584"
+  ms.lasthandoff: 03/26/2020
+  ms.locfileid: "80320735"
