--- a/articles/index.yml
+++ b/articles/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: cjgronlund
   ms.author: cgronlun
   ms.date: 10/21/2019
-  ms.openlocfilehash: 27f7ca535ddd846e7bae01baee3fbbb4713e0433
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: e21b191689c228fa3e7c0590ee2f79f625b3960d
+  ms.sourcegitcommit: a0e50c5f07841b99204c068cf5b5ec8ed087ffea
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77907420"
+  ms.lasthandoff: 03/26/2020
+  ms.locfileid: "80320835"
 landingContent:
 - title: 量子计算
   linkLists:
@@ -85,7 +85,9 @@ landingContent:
     links:
     - text: 标准库
       url: libraries/standard/index.md
-    - text: 数字库
-      url: libraries/numerics/index.md
     - text: 化学库
       url: libraries/chemistry/index.md
+    - text: 机器学习库
+      url: libraries/machine-learning/index.md
+    - text: 数字库
+      url: libraries/numerics/index.md
