--- a/api/qsharp/microsoft.quantum.simulation.generatorindex.yml
+++ b/api/qsharp/microsoft.quantum.simulation.generatorindex.yml
@@ -4,19 +4,19 @@ name: GeneratorIndex
 type: newtype
 namespace: Microsoft.Quantum.Simulation
 summary: >-
-  表示所有 dynamical 生成器（如 Hermitian 运算符）集中的单个基元术语，该生成器存在一个映射，该生成器将从该生成器通过 `EvolutionSet`进行时间演变。
+  表示所有 dynamical 生成器（如 Hermitian 运算符）集中的单个基元术语，该生成器存在一个从该生成器到该生成器的时间演化的映射`EvolutionSet`。
 
 
   第一个元素（Int []，Double []）是单个字词的索引，例如，系数0.5 的 Pauli 字符串 XXY 将按（[1，1，2]，[0.5]）进行索引。 或者，通过连续变量（例如 X cos φ + Y sin φ）参数化的 Hamiltonians 可能以（[]，[φ]）表示。 第二个元素对生成器在其上操作的子系统进行索引。
 remarks: >-
   > [!WARNING]
 
-  > 除引用一组特定生成器外，未定义 `GeneratorIndex` 的解释。
+  > 除引用一组`GeneratorIndex`特定生成器外，未定义的解释。
 
 
   ### <a name="examples"></a>示例
 
-  使用 <xref:microsoft.quantum.simulation.paulievolutionset>，operator $ \pi X_2 X_5 Y_9 $ 表示为：
+  使用<xref:microsoft.quantum.simulation.paulievolutionset>时，运算符 $ \pi X_2 X_5 Y_9 $ 表示为：
 
 
   ```qsharp
@@ -29,9 +29,9 @@ seeAlso:
 - evolutionset
 - paulievolutionset
 metadata:
-  ms.openlocfilehash: dc5f5b96a6d1708e94de918a65cbd68e0af06192
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d633ecdc11075eb45a40a58bb2a1ca67af577c3c
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73067044"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82655151"
