--- a/api/qsharp/microsoft.quantum.simulation.blockencodingreflection.yml
+++ b/api/qsharp/microsoft.quantum.simulation.blockencodingreflection.yml
@@ -3,14 +3,14 @@ uid: microsoft.quantum.simulation.blockencodingreflection
 name: BlockEncodingReflection
 type: newtype
 namespace: Microsoft.Quantum.Simulation
-summary: 表示也是反射的 `BlockEncoding`。
+summary: '`BlockEncoding`表示也是反射的。'
 syntax: newtype BlockEncodingReflection = Microsoft.Quantum.Simulation.BlockEncoding;
 seeAlso:
 - microsoft.quantum.canon.blockencoding
 metadata:
-  ms.openlocfilehash: 1c2102ca43ee73d3aac66f29c4b367d609d6c764
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: c5640b41ec535c2b4b832a0aee85706e1ca8c13f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065650"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82655074"
