--- a/api/qsharp/microsoft.quantum.core.rangeend.yml
+++ b/api/qsharp/microsoft.quantum.core.rangeend.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Core
 summary: 返回给定范围的定义结束值，该范围不一定是序列中的最后一个元素。
 remarks: >-
-  范围表达式的第一个元素为 `start`，其第二个元素是 `start+step`，第三个元素为 `start+step+step`，依此类推，直到传递 `end`。
+  范围表达式的第一个元素是`start`，其第二个`start+step`元素是，第`start+step+step`三个元素为， `end`依此类推，直到传递。
 
 
   请注意，范围的定义结束值可以与范围指定的序列中的最后一个元素不同;例如，在0到1的范围内。 2.。 5最后一个元素为4，但结束值为5。
@@ -23,9 +23,9 @@ output:
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: c7436046b6be7d4d0801471ecc6c78e36421e54a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 85e9006f73cd5f7b5a78b57148cbd7ad5b764878
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73066636"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82657640"
