--- a/api/qsharp/microsoft.quantum.core.rangestart.yml
+++ b/api/qsharp/microsoft.quantum.core.rangestart.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Core
 summary: 返回给定范围中定义的开始值。
 remarks: >-
-  范围表达式的第一个元素为 `start`，其第二个元素是 `start+step`，第三个元素为 `start+step+step`，依此类推，直到传递 `end`。
+  范围表达式的第一个元素是`start`，其第二个`start+step`元素是，第`start+step+step`三个元素为， `end`依此类推，直到传递。
 
 
   请注意，定义的范围的起始值与序列的第一个元素相同，除非该范围指定一个空序列（例如，2.）。 1）。
@@ -23,9 +23,9 @@ output:
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 0d618a26d71a5b41e6ea6b73503e9f099b18f129
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: a5a5240da851b459e732c78f7be94b8a2d02b1f1
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73231752"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82657247"
